# fabric-python-utilities

./: .gitignore  LICENSE  README.md  requirements_dev.txt  setup.cfg
notebook-example/: import_wheel_in_fabric_example.ipynb
pipeline/: azure-pipelines.yml  build.ps1  copy-files.ps1
src/company/utilites/: __init__.py  dummy_file.py
tests/utilities/: test_dummy_function.py
