[metadata]
name = fabricutilities
author = LJO
version = 1.0
description = Common Python Library for Fabric

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src

[options.package_data]
* = *.sql, *.yml

[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
max-line-length = 88
extend-ignore = E203, E501
per-file-ignores = __init__.py:F401

[isort]
profile = black

[black]
max-line-length = 88

[tool:pytest]
pythonpath = src

[bdist_wheel]
universal = 1